<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-45dp"
        tools:layout_editor_absoluteY="159dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/login_activity" />

        <TextView
            android:id="@+id/txtInvitation"
            style="@style/viewCustom"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/completa_los_niveles"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/etEmail"
            style="@style/viewCustom"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="30dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:autofillHints="" />
        <EditText
            android:id="@+id/etPassword"
            style="@style/viewCustom"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:autofillHints="" />
        <TextView
            android:id="@+id/btnLogin"
            style="@style/viewCustom"
            android:background="@color/teal_200"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textAlignment="center"
            android:text="@string/login"
            android:textStyle="bold"
            android:onClick="login"/>
        <TextView
            android:id="@+id/txtforgotpassword"
            style="@style/viewCustom"
            android:gravity="center_horizontal"
            android:text="@string/forgotPassword"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:onClick="forgotPassword"/>
        <LinearLayout
            android:id="@+id/lyTerms"
            style="@style/viewCustom"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cbAcept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acept"
                android:textSize="11sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/txtTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@color/teal_200"
                android:textSize="11sp"
                android:onClick="goTerms"/>
        </LinearLayout>
        <Button
            android:id="@+id/btSignGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/logo_google"
            android:drawablePadding="15dp"
            android:text="@string/google"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:onClick="callSignGoogle"/>
        <Button
            android:id="@+id/btSignFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/logoface"
            android:drawablePadding="15dp"
            android:text="@string/facebook"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>